--- a/style.css
+++ b/style.css
@@ -38,6 +38,36 @@ button {
 button:hover {
   background-color: #666;
 }
+ #rojao {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 0;
+      height: 0;
+      border-top: 50px solid transparent;
+      border-bottom: 50px solid transparent;
+      border-left: 50px solid #FFD700;
+      animation: explodir 1s forwards;
+    }
+
+    @keyframes explodir {
+      0% {
+        width: 0;
+        height: 0;
+        opacity: 1;
+      }
+      50% {
+        width: 200px;
+        height: 200px;
+        opacity: 1;
+      }
+      100% {
+        width: 0;
+        height: 0;
+        opacity: 0;
+      }
+}
 
 #resultado {
   display: none;
