--- a/style.css
+++ b/style.css
@@ -43,11 +43,13 @@ button:hover {
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 0;
-      height: 0;
-      border-top: 50px solid transparent;
-      border-bottom: 50px solid transparent;
-      border-left: 50px solid #FFD700;
+      display: none;
+    }
+
+    .ponto {
+      position: absolute;
+      border-radius: 50%;
+      opacity: 1;
       animation: explodir 1s forwards;
     }
 
@@ -58,8 +60,8 @@ button:hover {
         opacity: 1;
       }
       50% {
-        width: 200px;
-        height: 200px;
+        width: 50px;
+        height: 50px;
         opacity: 1;
       }
       100% {
@@ -67,8 +69,7 @@ button:hover {
         height: 0;
         opacity: 0;
       }
-}
-
+    }
 #resultado {
   display: none;
   font-size: 1.5rem;
