--- a/style.css
+++ b/style.css
@@ -38,38 +38,32 @@ button {
 button:hover {
   background-color: #666;
 }
- #rojao {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      display: none;
-    }
-
-    .ponto {
-      position: absolute;
-      border-radius: 50%;
-      opacity: 1;
-      animation: explodir 1s forwards;
-    }
-
-    @keyframes explodir {
-      0% {
-        width: 0;
-        height: 0;
-        opacity: 1;
-      }
-      50% {
-        width: 50px;
+#rojao {
         height: 50px;
-        opacity: 1;
+        width: 50px;
+        background-color: red;
+        border-radius: 50%;
+        position: absolute;
+        display: none;
+        z-index: 9999;
       }
-      100% {
-        width: 0;
-        height: 0;
-        opacity: 0;
+      #rojao .pontilhado {
+        height: 10px;
+        width: 10px;
+        background-color: yellow;
+        border-radius: 50%;
+        position: absolute;
+        animation: explodir 1s ease-out forwards;
       }
-    }
+      @keyframes explodir {
+        0% {
+          transform: scale(0);
+        }
+        100% {
+          transform: scale(1);
+          opacity: 0;
+        }
+      }
 #resultado {
   display: none;
   font-size: 1.5rem;
