--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-  background-color: #333;
+  background-color: linear-gradient(180deg, #3498db, #87cefa);
   color: #fff;
   text-align: center;
   padding: 20px;
